tests/snapshots/integration_tests__unmanage_cleanup.snap
---
source: tests/integration_tests.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] Branch feature-cleanup is now unmanaged by GHerrit.
